fix supporter align

--- a/website/css/lapax.css
+++ b/website/css/lapax.css
@@ -9,7 +9,7 @@ body {
 p {font-family: 'Orbitron', sans-serif;
   font-weight: 700;
   font-size: 16px;
-  padding-top: 100px;
+  padding-top: 60px;
 }
 
 a {
